# sas-94-search-API

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/config/: sas-ko-en-terms.json
data/manifests/: sas-docs.jsonl
docs/: query-taxonomy.md
sas94_search_api/: __init__.py  app.py  data_release.py  generation_stub.py  logging_utils.py  rerank.py  retrieval.py  retrieval_models.py  route_index.py  scoring.py  search_api.py  search_service.py  storage.py  taxonomy.py  text_utils.py
sas_rag/: app.py  search_api.py  search_service.py
scripts/: benchmark_sas_retrieval.py  search_sas_qdrant.py  serve_sas_search_api.py
scripts/app/: benchmark_sas_retrieval.py  search_sas_qdrant.py  serve_sas_search_api.py
scripts/index/: build_sas_fts_index.py  index_sas_qdrant.py
scripts/release/: build_search_data_bundle.py
