[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sas-94-search-api"
version = "0.1.1"
description = "Retrieval-only SAS 9.4 search API and Python package."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "qdrant-client[fastembed]>=1.17.1",
]

[project.scripts]
sas94-search-api = "sas94_search_api.search_api:serve_search_api"
sas94-search-data = "sas94_search_api.data_release:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sas94_search_api*"]
